@@ -1,0 +1,1 @@
+uqm_CFILES="loadmele.c melee.c pickmele.c"
